Added danfo.js, and example plot

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- Optionally add imports here  -->
+    <script src="https://cdn.jsdelivr.net/npm/danfojs@1.1.2/lib/bundle.js"></script>
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cairn</title>
   </head>
